--- a/Index.html
+++ b/Index.html
@@ -62,7 +62,7 @@
     <button id="si">Siiii 💗</button>
     <button id="no">No</button>
 
-    <img id="imagen" src="perdonada.png" alt="Imagen de perdón" />
+    <img id="imagen" src="Perdonada.png" alt="Imagen de perdón" />
 
     <script>
         const botonSi = document.getElementById('si');
@@ -86,4 +86,5 @@
     </script>
 
 </body>
+
 </html>
