--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
         /* Imagen centrada */
         #imagen {
-            display: none;       /* Oculta la imagen hasta que presionen "Sí" */
-            margin: 25px auto;   /* Centra horizontalmente */
-            max-width: 90vw;     /* Que no se salga del celular */
+            display: none;     
+            margin: 25px auto; 
+            max-width: 90vw;   
             border-radius: 15px;
             box-shadow: 0 0 10px #ff79c6;
         }
@@ -58,7 +58,7 @@
 </head>
 <body>
 
-    <h1 id="pregunta">¿Me perdonas porfis?</h1>
+    <h1 id="pregunta">Me arrepiento de decirle toxicaaaa ¿Me perdonas porfis?</h1>
     <button id="si">Siiii 💗</button>
     <button id="no">No</button>
 
@@ -88,3 +88,4 @@
 </body>
 
 </html>
+
